--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time to live chicas!! Hora COLOMBIA</title>
+    <title>Agendate!!</title>
     <!-- Incluye las fuentes 'Dancing Script' y 'Inter' de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -191,4 +191,5 @@
     </script>
 
 </body>
+
 </html>
